tests/ui/issues/issue-30589.stderr
error[E0412]: cannot find type `DecoderError` in this scope
  --> $DIR/issue-30589.rs:3:23
   |
LL | impl fmt::Display for DecoderError {
   |                       ^^^^^^^^^^^^ not found in this scope

error: hi
  --> $DIR/issue-30589.rs:3:1
   |
LL | impl fmt::Display for DecoderError {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ overlaps with this blanket impl
  --> $SRC_DIR/core/src/fmt/mod.rs:LL:COL
   |
   = note: built-in `dyn std::fmt::Display` implementation for this trait
   |
   = note: `#[forbid(dyn_overlap)]` on by default

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0412`.
